--- a/src/style.css
+++ b/src/style.css
@@ -80,10 +80,21 @@ button {
 .tooltip {
     position: absolute;
     text-align: center;
-    padding: 5px;
+    width: auto;
+    height: auto;
+    padding: 8px;
     font: 12px sans-serif;
     background: lightsteelblue;
     border: 0px;
     border-radius: 8px;
     pointer-events: none;
+}
+
+#slider-container {
+    text-align: center;
+    margin-bottom: 10px;
+}
+
+#year-slider {
+    width: 50%;
 }
