--- a/src/style.css
+++ b/src/style.css
@@ -77,6 +77,33 @@ button {
   stroke: #fff;
 }
 
+.legend-container {
+    display: flex;
+    justify-content: flex-end;
+    margin-bottom: 10px;
+}
+
+.legend-item {
+    margin-right: 20px;
+    display: flex;
+    align-items: center;
+}
+
+.legend-color {
+    display: inline-block;
+    width: 15px;
+    height: 15px;
+    margin-right: 5px;
+}
+
+#acres-burned-color {
+    background-color: steelblue;
+}
+
+#incident-count-color {
+    background-color: orange;
+}
+
 .tooltip {
     position: absolute;
     text-align: center;
