Move checkbox legend to upper left corner

--- a/src/style.css
+++ b/src/style.css
@@ -79,7 +79,7 @@ button {
 
 .legend-container {
     display: flex;
-    justify-content: flex-end;
+    justify-content: flex-start;
     margin-bottom: 10px;
 }
 
